--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
             <artifactId>spring-tx</artifactId>
             <version>6.2.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.ocpsoft.prettytime/prettytime -->
+        <dependency>
+            <groupId>org.ocpsoft.prettytime</groupId>
+            <artifactId>prettytime</artifactId>
+            <version>5.0.9.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
